# EmotionLM

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PATENTS  README.md  pyproject.toml  requirements.txt
affective_rag/: __init__.py  als.py  context_path_traversal.py  example.py  logging_example.py  memory_store.py
affective_rag/core/: als.py  context_path_traversal.py  memory_store.py
affective_rag/examples/: als_vs_rag_bench.py  als_vs_rag_test.py  evaluate_als_llm_judge.py  logging_example.py  no_spread_demo.py  spreading_demo.py  topk_demo.py  unified_sampling_demo.py
docs/: ALS_INVENTION_LOG.md  UNIFIED_SAMPLING.md
emotion_lm/agents/: emotion_agent.py  standard_emotion_agent.py
emotion_lm/algorithms/: mlp.py
emotion_lm/models/: graph.py  memory.py  model_wrapper.py
examples/: __init__.py  chroma_demo.py
research/scripts/: Dataset_Generation.ipynb
tests/: test_agent.py  test_graph.py
training/: evaluate.py  model.py  train.py
v1/: README.md  REPRODUCE.md  requirements.txt
v1/code/: causal_association_generator.py  evaluate_binary_classification.py  evaluate_llm_as_a_judge.py  evaluate_rag_vs_context_path_responses.py  evaluate_v3_unbiased.py  evaluate_v4_mlp_no_i.py  evaluate_v4_mlp_unbiased.py  generate_dataset.py  generate_narrative_benchmark.py  generate_unified_dataset.py  llm_as_a_judge_config.json  model.py  model_mlp.py  model_mlp_no_i.py  model_v2.py  test_cpt_traversal.py  train.py  train_v2_models.py  train_v3_intensity.py  train_v4_mlp.py  train_v4_mlp_no_i.py  training_config.json  training_config_unified_linear.json  (+1 more)
(+34 files in other folders)
